--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.2.4",
         "axios": "^0.25",
+        "cypress": "^9.5.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
